2006-03-11  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (autoconf.h): Note location change.

2005-08-20  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Use K5_AC_INIT instead of AC_INIT.

2004-09-22  Tom Yu  <tlyu@mit.edu>

	* pty-int.h: Include util.h if present.

2004-07-30  Tom Yu  <tlyu@mit.edu>

	* configure.in: Only sanity-check setutent() API if there is no
	utmpx.h, since some setutent() implementations aren't sysV-derived,
	e.g., NetBSD.

2004-07-16  Ken Raeburn  <raeburn@mit.edu>

	* pty-int.h: Include port-sockets.h instead of netdb.h and
	netinet/in.h.

2004-06-16  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (clean-mac): Target deleted.

2004-06-11  Ken Raeburn  <raeburn@mit.edu>

	* pty-int.h (_AIX && _THREAD_SAFE): Undefine _THREAD_SAFE.

2004-06-04  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (LIBBASE): Renamed from LIB.

2004-04-12  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Remove tests for strsave, sys_errlist,
	krb5_sigtype, setjmp, dirent, F_SETOWN. These are left over from
	the split from appl/bsd.

2004-02-18  Ken Raeburn  <raeburn@mit.edu>

	* cleanup.c, init.c, init_slave.c, vhangup.c: Use ANSI style
	function definitions.

2003-03-03  Tom Yu  <tlyu@mit.edu>

	* configure.in: Delete unused ADD_DEF, probably left over from
	appl/bsd.

2003-01-10  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't explicitly invoke AC_PROG_INSTALL,
	AC_PROG_ARCHIVE, AC_PROG_RANLIB.

	* Makefile.in: Add AC_SUBST_FILE marker for lib_frag and libobj_frag.

2002-12-06  Ezra Peisach  <epeisach@bu.edu>

	* configure.in: Quote the argument to AC_CHECK_HEADER. Autoconf
	2.57 was having problems.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

	* pty_err.et: Add final "end" statement.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-07-12  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (install): Don't install libpty.h.